Good progress on the reflow controller.

--- a/Software/IceFlow/IceFlow/IceFlow.vcxproj.filters
+++ b/Software/IceFlow/IceFlow/IceFlow.vcxproj.filters
@@ -255,6 +255,12 @@
     <ClInclude Include="src\Screens\Panels\RFS_Sidebar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\OvenController\ReflowStage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\OvenController\Reflow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DisplayManager\DisplayManager.cpp">
@@ -372,6 +378,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Screens\Panels\RFS_Sidebar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\OvenController\Reflow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
