Added PID Edit dialog and mostly working. Did some other refactors that probably broked stuff. :(

--- a/Software/IceFlow/IceFlow/IceFlow.vcxproj
+++ b/Software/IceFlow/IceFlow/IceFlow.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="src\Screens\DialogBoxes\KeyboardButton.h" />
     <ClInclude Include="src\Screens\DialogBoxes\KeyboardButtonType.h" />
     <ClInclude Include="src\Screens\DialogBoxes\KeyboardDialog.h" />
+    <ClInclude Include="src\Screens\DialogBoxes\PidEditor.h" />
     <ClInclude Include="src\Screens\DialogBoxes\TargetTemperatureDlg.h" />
     <ClInclude Include="src\Screens\DialogBoxes\MessageBox.h" />
     <ClInclude Include="src\Screens\DialogBoxes\NumberPadDialogBox.h" />
@@ -212,6 +213,7 @@
     <ClCompile Include="src\Screens\DialogBoxes\DialogButton.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\KeyboardButton.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\KeyboardDialog.cpp" />
+    <ClCompile Include="src\Screens\DialogBoxes\PidEditor.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\TargetTemperatureDlg.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\MessageBox.cpp" />
     <ClCompile Include="src\Screens\DialogBoxes\NumberPadDialogBox.cpp" />
