Added second PCB with USB Power.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /Software/IceFlow/IceFlow/__vm
 /Software/IceFlow/IceFlow/Debug
 /Software/IceFlow/IceFlow/Release
+/Hardware/IceFlow/IceFlow.kicad_sch-bak
+/Hardware/IceFlow/IceFlow-backups
+/Hardware/IceFlow_USB/IceFlow_USB.kicad_sch-bak
+/Hardware/IceFlow_USB/IceFlow_USB-backups
