Pin map changes

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Hardware/IceFlow/IceFlow-backups
 /Hardware/IceFlow_USB/IceFlow_USB.kicad_sch-bak
 /Hardware/IceFlow_USB/IceFlow_USB-backups
+GCode
